--- a/src/styles/decision.scss
+++ b/src/styles/decision.scss
@@ -195,7 +195,28 @@
                 padding-bottom: 3vh;
                 background-color: white;
                 margin-top: 2vh;
-                margin-bottom: 5vh;
+                margin-bottom: 2vh;
+                margin-left: auto;
+                margin-right: auto;
+                overflow-y: auto;
+                box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+
+                .submit-user-feedback-button {
+                    display: flex;
+                    justify-content: center;
+                }
+            }
+            .user-feedback-flashing {
+                width: 90%;
+                height: 50vh;
+                max-height: 50vh;
+                padding-left: 2vh;
+                padding-right: 2vh;
+                padding-top: 1vh;
+                padding-bottom: 3vh;
+                background-color: white;
+                margin-top: 2vh;
+                margin-bottom: 2vh;
                 margin-left: auto;
                 margin-right: auto;
                 overflow-y: auto;
@@ -215,7 +236,6 @@
             }
 
             .quit {
-                margin-top: 5vh;
                 display: flex;
                 justify-content: center;
             }
