--- a/src/styles/decision.scss
+++ b/src/styles/decision.scss
@@ -185,6 +185,26 @@
                     margin-bottom: 15px;
                 }
             }
+            .loading-screen {
+                width: 90%;
+                height: 50vh;
+                max-height: 50vh;
+                padding-left: 2vh;
+                padding-right: 2vh;
+                padding-top: 1vh;
+                padding-bottom: 3vh;
+                background-color: white;
+                margin-top: 2vh;
+                margin-bottom: 2vh;
+                margin-left: auto;
+                margin-right: auto;
+                overflow-y: auto;
+                box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
             .user-feedback {
                 width: 90%;
                 height: 50vh;
