--- a/src/styles/decision.scss
+++ b/src/styles/decision.scss
@@ -200,9 +200,12 @@
                 margin-right: auto;
                 overflow-y: auto;
                 box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
-                display: flex;
-                align-items: center;
-                justify-content: center;
+                .loading-section {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    transform: translate(0, 50%);
+                }
             }
 
             .user-feedback {
