--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -12,7 +12,8 @@
         box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
         position: absolute;
         margin: auto;
-        height: 75%;
+        margin-bottom: 5vh;
+        height: 80%;
         width: 60%;
         min-width: 500px;
         max-width: 1000px;
@@ -52,11 +53,12 @@
             }
 
             .robotGif {
-                height: 20vh;
+                height: 15vh;
                 margin: auto;
             }
             
             .text {
+                font-size: 1.8vh;
                 text-align: left;
                 clear: both;
                 margin: auto;
@@ -68,20 +70,26 @@
                 }
             }
 
+            .nullHypothesisImg {
+                height: 20vh;
+                margin: auto;
+            }
+
             .hypothesisBlock {
                 text-align: left;
                 clear: both;
                 width: 80%;
-                padding-top: 3vh;
+                padding-top: 1vh;
+                padding-left: 10%;
                 margin-bottom: 5vh;
                 .hypothesisTitle {
-                    font-size: 2.5vh;
+                    font-size: 2vh;
                     color: #114B5F;
                     font-family: Helvetic, sans-serif;
                     margin-bottom: 2px;
                 }
                 .hypothesisText {
-                    font-size: 2vh;
+                    font-size: 1.8vh;
                 }
             }
             .hypothesisBlock:last-child { margin: 0; }
