Changed conclusion and added survey questions

--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -28,7 +28,7 @@ table.radioButtonGroup > tbody {
 }
 
 .rankedScale {
-    width: 250px;
+    width: 90%;
     height: 55px;
     text-align: center;
     margin: auto;
