--- a/src/styles/survey.scss
+++ b/src/styles/survey.scss
@@ -35,6 +35,7 @@
         border: solid 5px $lightGray;
         background-color: $lightGray;
         margin-bottom: 20px;
+        min-width: 80vh;
 
         .rankedScaleContainer {
             width: 100%;
