--- a/src/styles/conclusion.scss
+++ b/src/styles/conclusion.scss
@@ -1,18 +1,71 @@
+@import "./variables.scss";
+
 .conclusionPage {
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
-    .page0 {
-        width: 40%;
-        margin: auto;
-        margin-top: 50px;
-        background-color: #f3f3f3;
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    .rightDecisionPanel {
+        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
         padding: 20px;
-    }
+        height: 100%;
+        
+        .rightDecisionPanelContainer {
+            background-color: $lightGray;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+            height: 95vh;
+            width: 47vw;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
 
-    .continueButton {
-        width: 200px;
-        margin: auto;
-        display: block;
+            .title {
+                color: #114B5F;
+                margin-top: 5vh;
+                margin-bottom: 3vh;
+            }
+
+            .nullHypothesisImg {
+                height: 25vh;
+                margin-top: 3%;
+                margin-left: 10%;
+                margin-right: 10%;
+            }
+
+            .text {
+                font-size: 1.8vh;
+                text-align: left;
+                clear: both;
+                margin: auto;
+                margin-top: 5vh;
+                margin-bottom: 3vh;
+                width: 80%;
+                vertical-align: top;
+                p:nth-of-type(1) {
+                    margin-top: 0;
+                }
+            }
+
+            .hypothesisBlock {
+                text-align: left;
+                clear: both;
+                width: 80%;
+                padding-left: 10%;
+                margin-bottom: 5vh;
+                .hypothesisTitle {
+                    font-size: 2vh;
+                    color: #114B5F;
+                    font-family: Helvetic, sans-serif;
+                    margin-bottom: 2px;
+                }
+                .hypothesisText {
+                    font-size: 1.8vh;
+                }
+            }
+
+            .continueButton {
+                width: 200px;
+                margin: auto;
+                display: flex;
+            }
+        }
     }
 }
