--- a/src/styles/decision.scss
+++ b/src/styles/decision.scss
@@ -240,6 +240,12 @@
                         color: #114B5F;
                         font-family: Helvetic, sans-serif;
                         margin-bottom: 2px;
+                        animation: blinker 3s linear infinite;
+                    }
+                    @keyframes blinker {
+                        50% {
+                            border-color: #fff;
+                        }
                     }
                     .hypothesisText {
                         margin-top: 1vh;
@@ -251,6 +257,7 @@
                 .slider-box {
                     padding-left: 3%;
                     max-width: 80%;
+                    padding-bottom: 4%;
                 }
             }
             .user-feedback-flashing {
