New Changes Updated

--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -76,6 +76,8 @@
             }
 
             .hypothesisBlock {
+                position: absolute;
+                top: 50%;
                 text-align: left;
                 clear: both;
                 width: 80%;
