Updated New Changes

--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -71,13 +71,15 @@
             }
 
             .nullHypothesisImg {
-                height: 20vh;
+                height: 52.5vh;
                 margin: auto;
+                padding-left: 2%;
+
             }
 
             .hypothesisBlock {
                 position: absolute;
-                top: 50%;
+                top: 70%;
                 text-align: left;
                 clear: both;
                 width: 80%;
