--- a/src/styles/decision.scss
+++ b/src/styles/decision.scss
@@ -63,7 +63,7 @@
         .rightDecisionPanelContainer {
             background-color: $lightGray;
             box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
-            height: 95vh;
+            height: 100%;
             width: 47vw;
 
             .collectionRightPanel {
@@ -300,7 +300,7 @@
             padding-left: 20px;
             background-color: $lightGray;
             box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
-            height: 92vh;
+            height: 100%;
             width: 45vw;
             z-index: 0;
 
